<resources>
    <string name="app_name">Werewolf</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="how_to_play">How to Play</string>
    <string name="winners">Winners</string>
    <string name="role">Role</string>
    <string name="roles">Roles</string>
    <string name="max">Role Max Amount</string>
    <string name="done">Done</string>
    <string name="play_again">Play Again</string>
    <string name="game_logs">Game Logs</string>
    <string name="exit_game">Exit Game</string>
    <string name="proceed">Proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="round_finished">Round Finished</string>
    <string name="used">Used</string>
    <string name="was_revived">Was Revived</string>
    <string name="was_shot">Was shot</string>
    <string name="was_mauled">Was mauled</string>
    <string name="was_hanged">Was hanged</string>
    <string name="was_burnt">Was burnt</string>
    <string name="exploded">Exploded</string>
    <string name="role_description">Role Description</string>
    <string name="team">Team:</string>
    <string name="saw">%1$s visited or was visited by %2$s</string>
    <string name="waiting_server">Waiting for Server</string>
    <string name="ip">IP</string>
    <string name="host">Host</string>
    <string name="refresh">Refresh</string>
    <string name="server_list">Server List</string>
    <string name="join">Join</string>
    <string name="enter_name">Enter Name</string>
    <string name="select_server">Select Server</string>
    <string name="background_image">Background Image</string>
    <string name="remaining_players">Remaining Players</string>
    <string name="premium">Premium</string>

    <string name="intro1">The game consists of two teams: the werewolf and his followers,
        and the villagers (with the jester, who will be explained later on).
        For a team to win, they must eliminate all the players on the opposing team. Each team has different roles, and each of them has
        unique abilities that can be used to achieve victory.</string>
    <string name="intro2">The game consists of two phases: night and day. At night, players will use their abilities to attack, survive attacks from
        the opposing team, gain information, etc. The werewolf team knows who the villagers are and who their teammates are. In contrast,
        the villagers must figure out who the werewolves are in order to eliminate them. If the werewolf is killed, and it is not the last of his team,
        a teammate will take his place as the werewolf.</string>
    <string name="intro3">During the day, players will have time (as much as they want, although a timer can be set if desired) to discuss who the
        werewolves might be (werewolves are encouraged to pretend being villagers) and, at the end of the discussion, players can vote for someone to
        be put on trial. After his defense, the rest of the players will individually vote on whether they want to eliminate (by hanging) him
        or not (the player is eliminate if the majority votes so). After that, the round ends, night falls, and a new round begins.</string>
    <string name="intro4">There is one role that plays solo: the jester. The jester wins only by getting himself hanged at the end of the round.</string>
    <string name="intro5">The game starts at night, each player is secretly assigned a role and should perform their actions discreetly
        (without showing their phone screen to the other players)."</string>
    <string name="finished_round_description">Now you may set a time to discuss to find out who the werewolves are.\n
    Everyone can comment his role (or lie about it), or comment what ability did he use at night (or lie about it).\n
    After the set time is completed, all players vote at the same time. If it\'s a draw, no one is hanged and you shall continue to the next round.\n
    If someone is selected, he/she has a chance to defend himself and say whatever he wishes.\n
    After his/her defense, everyone votes at the same time if he wishes to hang the accused player or to save him (thumbs up / thumbs down).\n
    If the majority wants to hang him, select the player and continue to next round</string>

    <string name="werewolves_win">Werewolves Win</string>
    <string name="villagers_win">Villagers Win</string>
    <string name="draw">Draw</string>
    <string name="jester_wins">Jester Wins</string>

    <string name="unknown_ability_state">Unknown Ability State</string>
    <string name="no_uses_left">No Uses Left</string>
    <string name="on_cooldown">On Cooldown</string>
    <string name="select_player">Select Player</string>
    <string name="no_ability">No Ability</string>

    <string name="unknown_role">Unknown Role</string>
    <string name="lightbearer">Lightbearer</string>
    <string name="villager">Villager</string>
    <string name="protector">Protector</string>
    <string name="vigilante">Vigilante</string>
    <string name="reviver">Reviver</string>
    <string name="veteran">Veteran</string>
    <string name="elusive">Elusive</string>
    <string name="detonator">Detonator</string>
    <string name="jester">Jester</string>
    <string name="werewolf">Werewolf</string>
    <string name="evil_jailer">Evil Jailer</string>
    <string name="vampire">Vampire</string>
    <string name="necromancer">Necromancer</string>
    <string name="zombie">Zombie</string>
    <string name="arsonist">Arsonist</string>
    <string name="stalker">Stalker</string>
    <string name="detective">Detective</string>
    <string name="disguiser">Disguiser</string>

    <string name="cancel_player_ability">Cancel Player Ability</string>
    <string name="werewolf_attack">Werewolf Attack</string>
    <string name="vampire_attack">Vampire Attack</string>
    <string name="shot">Shot</string>
    <string name="protection">Protection</string>
    <string name="barrier">Barrier</string>
    <string name="revive_spell">Revive Spell</string>
    <string name="alert">Alert</string>
    <string name="ignite">Ignite</string>
    <string name="oil_spill">Oil Spill</string>
    <string name="hide">Hide</string>
    <string name="hidden">Hidden</string>
    <string name="place_bomb">Place Bomb</string>
    <string name="remove_bomb">Remove Bomb</string>
    <string name="stalk">Stalk</string>
    <string name="investigate">Investigate</string>
    <string name="candidates">Candidates:</string>

    <string name="unknown_description">Description not found</string>
    <string name="werewolf_description">Belongs to the werewolves team. Every night can select a villager to eliminate</string>
    <string name="evil_jailer_description">Belongs to the werewolves team. Every night can select a villager to cancel his/her ability</string>
    <string name="vampire_description">Belongs to the werewolves team. Can select a villager to eliminate at night. Her Ability has 1 turn cooldown
        and it starts on cooldown</string>
    <string name="necromancer_description">Belongs to the werewolves team. Can select a dead player to revive it as a zombie. His ability has priority
        over the reviver </string>
    <string name="zombie_description">Belongs to the werewolves team. Has no ability, but can vote at the end of the round (only appears
        when revived by necromancer).</string>
    <string name="arsonist_description">Belongs to the werewolves team. At night can spill oil on up to 2 players or ignite. Ignite kills all
        the players with oil, including the arsonist.</string>
    <string name="villager_description">Belongs to the villagers team. Has no ability</string>
    <string name="lightbearer_description">Belongs to the villagers team. Can cast a protection barrier on a player at night
        (protects from all attacks on that turn). The ability has 1 turn cooldown.</string>
    <string name="reviver_description">Belongs to the villagers team. Once a game can select a player to revive (werewolves are included and are
        revived with a werewolf role, choose wisely)</string>
    <string name="vigilante_description">Belongs to the villagers team. Once a game can select a player to shot to kill(villagers included)</string>
    <string name="veteran_description">Belongs to the villagers team. Once a game can stay alert at night (Every player that visits him, will get shot).</string>
    <string name="protector_description">Belongs to the villagers team. Has two lives (dies instantly if hanged).Every night can select a player
        to protect from all attacks he/she receives.</string>
    <string name="elusive_description">Belongs to the villagers team. At night can hide into a player\'s house. All the abilities that target him
        directly have no effect. Both he and his host receive the abilities targeted to the host. If he hides in the house of werewolf, he is attacked.
    When two elusive hide in each other\'s houses, one of them will have the priority and will hide in the other elusive house. The other elusive will not hide.</string>
    <string name="detonator_description">Belongs to the villagers team. At night can set the bomb in a player\'s house . When the detonator dies,
        the bomb explodes, striking the target player. The Detonator may change the bomb to other location. If he dies in the same night when
        he set the bomb, the ability has no effect.</string>
    <string name="stalker_description">Belongs to the villagers team. At night can stalk a player, the next round will be revealed to him ONE player
        that visited or was visited by target player (if there was any). If it\'s revealed to him that the targeted player visited or was visited by
    the stalker, this means that the target player visited the stalker</string>
    <string name="detective_description">Belongs to the villagers team. At night can investigate. The next day 3 players will be revealed to him.
        At least one of them is a werewolf.</string>
    <string name="disguiser_description">Belongs to the villagers team. Appears as a werewolf teammate secretly. If a werewolf uses an ability over a
        teammate, it will have no effect (so werewolves don\'t kill each other).</string>
    <string name="jester_description">Plays alone. Has no ability. His objective is to be hanged at the end of any round.</string>

</resources>