<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image_dark_village" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_shape"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/textview_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton" />

    <EditText
        android:id="@+id/termEditText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        app:layout_constraintStart_toEndOf="@id/nameTextView"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        android:textColor="#FFFFFF"
        android:autofillHints="@string/name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:text="@string/add"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        android:textAllCaps="false"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        android:columnCount="3"
        android:padding="10dp">
    </GridLayout>

    <Button
        android:id="@+id/howToPlayButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/how_to_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_shape"
        android:textAllCaps="false"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/OptionFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    </androidx.fragment.app.FragmentContainerView>

</androidx.constraintlayout.widget.ConstraintLayout>