<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/imageview_background" />

    <FrameLayout
        android:id="@+id/playerHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gameLogsButton">
        <include
            layout="@layout/shared_player_grid_header" />
    </FrameLayout>

    <Button
        android:id="@+id/gameLogsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/game_logs"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/confirmButton"/>

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/button_shape"
        android:text="@string/play_again"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_shape"
        android:text="@string/exit_game"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/playAgainButton"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>