<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image_dark_village" />

    <include
        layout="@layout/textview_title2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/imageview_shape">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/roleImageLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:src="@drawable/werewolf"
            android:scaleType="fitXY"
            android:background="@drawable/imageview_shape"
            app:shapeAppearanceOverlay="@style/CustomShapeAppearance"
            >
        </com.google.android.material.imageview.ShapeableImageView>
    </LinearLayout>

    <include
        layout="@layout/textview_description" />

    <ImageButton
        android:id="@+id/roleDescriptionButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/role_description"
        android:src="@drawable/image_questionmark"
        android:scaleType="fitXY" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="440dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:columnCount="3"
        android:padding="16dp">
    </GridLayout>

    <TextView
        android:id="@+id/roleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="70dp"
        android:layout_marginTop="0dp"
        android:padding="35dp"
        android:background="@drawable/textview_shape3"
        android:textColor="@android:color/black"
        android:text="@string/werewolf_description"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/roleName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="110dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/team"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/textview_shape" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="90dp"
        android:layout_marginStart="100dp">

        <GridLayout
            android:id="@+id/teammatesGridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:padding="16dp" />
    </FrameLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_shape"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</FrameLayout>