<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image_dark_village" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_margin="40dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/shape_pink_button"
        android:textAllCaps="false"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/termEditTextContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        android:layout_marginTop="30dp"
        android:layout_width="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="50dp"
        app:strokeWidth="5dp"
        app:strokeColor="@color/dark_red"
        app:shapeAppearanceOverlay="@style/corner10dp">

        <EditText
            android:id="@+id/termEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name"
            android:background="@drawable/image_wood_background_clean"
            android:fontFamily="@font/beleren2016_bold"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/add"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/shape_pink_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/termEditTextContainer"
        app:layout_constraintBottom_toBottomOf="@id/termEditTextContainer"
        android:textAllCaps="false"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        >
        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true"
            android:gravity="center"
            android:columnCount="3"
            android:padding="10dp">
        </GridLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvServerIp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/ip"
        android:textSize="18sp"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/OptionFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    </androidx.fragment.app.FragmentContainerView>

</androidx.constraintlayout.widget.ConstraintLayout>