<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/intro1"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/imageview_shape">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:adjustViewBounds="true"
                android:src="@drawable/image_wood_background_clean"
                app:shapeAppearanceOverlay="@style/CustomShapeAppearance"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/intro1"
                android:justificationMode="inter_word"
                android:textSize="14sp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/intro2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/imageview_shape">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:adjustViewBounds="true"
                android:src="@drawable/image_wood_background_clean"
                app:shapeAppearanceOverlay="@style/CustomShapeAppearance"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/intro2"
                android:justificationMode="inter_word"
                android:textSize="14sp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/intro3"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/imageview_shape">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:adjustViewBounds="true"
                android:src="@drawable/image_wood_background_clean"
                app:shapeAppearanceOverlay="@style/CustomShapeAppearance"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/intro3"
                android:justificationMode="inter_word"
                android:textSize="14sp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/intro4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/imageview_shape">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:adjustViewBounds="true"
                android:src="@drawable/image_wood_background_clean"
                app:shapeAppearanceOverlay="@style/CustomShapeAppearance"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/intro4"
                android:justificationMode="inter_word"
                android:textSize="14sp"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/intro5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/imageview_shape">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:adjustViewBounds="true"
                android:src="@drawable/image_wood_background_clean"
                app:shapeAppearanceOverlay="@style/CustomShapeAppearance"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/intro5"
                android:justificationMode="inter_word"
                android:textSize="14sp"/>
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>